[PROD-2775] Video more option icon z-index issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1774,12 +1774,6 @@ span.dashicons.dashicons-admin-file:before {
 				pointer-events: none;
 			}
 		}
-
-		@media screen and (max-width: 980px) {
-
-			z-index: 999;
-
-		}
 	}
 
 	&.no_more_option {
@@ -1798,6 +1792,12 @@ span.dashicons.dashicons-admin-file:before {
 			display: none;
 		}
 
+		@media screen and (max-width: 980px) {
+
+			.item-action-wrap {
+				z-index: 999;
+			}
+		}
 	}
 
 	/* smartphones, touchscreens */
